--- a/src/components/site/SelectLink/SelectLink.module.scss
+++ b/src/components/site/SelectLink/SelectLink.module.scss
@@ -1,7 +1,7 @@
 .wrap {
   position: relative;
   & input {
-    width: 260px;
+    width: 320px;
     border: none;
     outline: none;
     background-color: #f5f3f0;
@@ -19,13 +19,13 @@
   z-index: 2;
 }
 .menuLink {
-  width: 260px;
+  width: 320px;
   white-space: nowrap;
   padding: 6px;
   color: #666;
   text-decoration: none;
   &:hover {
-    background-color: #a88da8;
+    background-color: #80241e;
     color: white;
   }
 }
