--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
-  color: #666;
+  color: #000;
 }
 * {
   box-sizing: border-box;
@@ -18,7 +18,7 @@ body {
 .btn {
   outline: none;
   color: white;
-  background-color: #805e84;
+  background-color: #80241e;
   border-radius: 0;
   border: none;
   height: 25px;
