Add admin panel

--- a/src/components/site/HeaderBottom/HeaderBottom.module.scss
+++ b/src/components/site/HeaderBottom/HeaderBottom.module.scss
@@ -1,12 +1,14 @@
 .wrap {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 20px;
   margin-top: 30px;
   margin-bottom: 10px;
 }
 .label {
   margin-right: 6px;
+  white-space: nowrap;
 }
 @media (max-width: 900px) {
   .wrap {
