--- a/src/components/site/HomeBanner2/HomeBanner2.module.scss
+++ b/src/components/site/HomeBanner2/HomeBanner2.module.scss
@@ -11,7 +11,7 @@
 }
 .title {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 5px;
 }
@@ -21,7 +21,7 @@
 }
 .centerText {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 700;
   margin-top: 20px;
   text-align: center;
   margin-bottom: 20px;
