--- a/src/components/site/HomeBanner3/HomeBanner3.module.scss
+++ b/src/components/site/HomeBanner3/HomeBanner3.module.scss
@@ -1,7 +1,8 @@
 .wrap {
   background-color: #85c3c5;
   color: #fff;
-  width: 350px;  margin: 0 auto;
+  width: 350px;
+  margin: 0 auto;
 }
 .content {
   border: 1px solid #fff;
@@ -10,7 +11,7 @@
 }
 .title {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 5px;
 }
@@ -20,7 +21,7 @@
 }
 .centerText {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 700;
   margin-top: 20px;
   text-align: center;
   margin-bottom: 20px;
