--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700&display=swap');
+
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Mulish', sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
@@ -25,4 +28,25 @@ body {
   padding: 5px 12px 7px 12px;
   cursor: pointer;
   user-select: none;
+}
+.ql-editor {
+  height: 400px !important;
+}
+.quill-table .ql-editor {
+  height: 200px !important;
+}
+
+.input-table-service {
+  width: calc(100% - 72px);
+  margin-left: 16px;
+  display: block;
+  resize: none;
+  height: 30.75px;
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  font-family: inherit;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  outline: none;
+  border-radius: 4px;
+  padding: 6px 12px;
 }
