--- a/src/components/site/HeaderBottom/HeaderBottom.module.scss
+++ b/src/components/site/HeaderBottom/HeaderBottom.module.scss
@@ -2,13 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 0px;
   margin-top: 30px;
   margin-bottom: 10px;
 }
 .label {
+  line-height: 14px;
   margin-right: 6px;
   white-space: nowrap;
+  margin-bottom: 2px;
 }
 @media (max-width: 900px) {
   .wrap {
