--- a/src/components/site/MainNews/MainNews.module.scss
+++ b/src/components/site/MainNews/MainNews.module.scss
@@ -23,6 +23,7 @@
   grid-gap: 30px;
 }
 .item {
+  cursor: pointer;
   &:nth-child(1) {
     padding-left: 6px;
   }
@@ -33,6 +34,10 @@
 }
 .name {
   line-height: 22px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 @media (max-width: 900px) {
   .list {
