--- a/src/components/site/HomeNavigation/HomeNavigation.module.scss
+++ b/src/components/site/HomeNavigation/HomeNavigation.module.scss
@@ -3,10 +3,20 @@
   grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
   justify-content: space-evenly;
   grid-gap: 40px;
-  background-color: #f5f3f0;
+
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px 20px 30px;
   margin-top: 50px;
   margin-bottom: 50px;
+}
+.wrap {
+  background-color: #f5f3f0;
+}
+@media (min-width: 600px) {
+  .list {
+    max-width: 1160px;
+  }
 }
 .item {
   display: flex;
