--- a/src/components/site/MainNews/MainNews.module.scss
+++ b/src/components/site/MainNews/MainNews.module.scss
@@ -1,14 +1,14 @@
 .wrap {
   width: 100%;
   padding: 0 20px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .head {
   display: flex;
   align-items: center;
   text-transform: uppercase;
   position: relative;
-  padding-left: 6px;
+  // padding-left: 6px;
   &::before {
     content: '';
     display: block;
@@ -27,10 +27,13 @@
   &:nth-child(1) {
     padding-left: 6px;
   }
+  & + & {
+    margin-top: 18px;
+  }
 }
 .date {
   font-weight: 700;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
 }
 .name {
   line-height: 22px;
