--- a/src/components/site/Header/Header.module.scss
+++ b/src/components/site/Header/Header.module.scss
@@ -37,6 +37,7 @@
     height: 10px;
     margin-top: 1px;
     margin-right: 4px;
+	color: white;
     img {
       display: block;
       object-fit: contain;
