--- a/src/components/site/HomeNavigation/HomeNavigation.module.scss
+++ b/src/components/site/HomeNavigation/HomeNavigation.module.scss
@@ -11,7 +11,7 @@
   margin-bottom: 50px;
 }
 .wrap {
-  background-color: #f5f3f0;
+  background-color: #e9f0fd;
 }
 @media (min-width: 600px) {
   .list {
