--- a/src/components/site/SiteContentTable/SiteContentTable.module.scss
+++ b/src/components/site/SiteContentTable/SiteContentTable.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   margin-bottom: 70px;
   & th {
-    background-color: #80241e;
+    background-color: #0e1b44;
     color: #fff;
     padding: 0;
     padding: 15px;
@@ -29,7 +29,7 @@
   font-family: inherit;
   color: #fff;
   padding: 4px 10px 5px;
-  background-color: #80241e;
+  background-color: #6c8dd1;
 }
 
 .title {
