--- a/src/components/site/FormCheckout/SiteTabs/SiteTabs.module.scss
+++ b/src/components/site/FormCheckout/SiteTabs/SiteTabs.module.scss
@@ -15,7 +15,7 @@
   padding-bottom: 15px;
   position: relative;
   transition: all 0.3s;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgb(0 0 0);
   &::after {
     content: '';
     display: block;
