--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   color: #000;
+  font-weight: 600;
 }
 * {
   box-sizing: border-box;
