--- a/src/components/site/Header/Header.module.scss
+++ b/src/components/site/Header/Header.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: #fff;
+  color: #000;
 }
 .left {
   margin-top: 14px;
@@ -37,7 +37,7 @@
     height: 10px;
     margin-top: 1px;
     margin-right: 4px;
-	color: white;
+    color: black;
     img {
       display: block;
       object-fit: contain;
