--- a/src/components/site/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/site/HeaderMenu/HeaderMenu.module.scss
@@ -12,8 +12,11 @@
   }
 }
 .link {
-  color: #fff;
+  color: #000;
   text-decoration: none;
+  padding: 4px;
+  background-color: #ffffff;
+  font-weight: 800;
   & + & {
     margin-left: 20px;
   }
