--- a/src/components/site/Header/Header.module.scss
+++ b/src/components/site/Header/Header.module.scss
@@ -38,6 +38,7 @@
     margin-top: 1px;
     margin-right: 4px;
     color: black;
+    background-color: #9bcadf;
     img {
       display: block;
       object-fit: contain;
