--- a/src/components/site/HomeBanners/HomeBanners.module.scss
+++ b/src/components/site/HomeBanners/HomeBanners.module.scss
@@ -9,6 +9,7 @@
   margin-bottom: 40px;
 }
 .fullBanner {
-  margin: 0 auto;
-  display: block;
+margin: 0 auto;
+display: block;
+margin-bottom: 30px;
 }
