--- a/src/components/site/SelectLink/SelectLink.module.scss
+++ b/src/components/site/SelectLink/SelectLink.module.scss
@@ -6,7 +6,7 @@
     width: 320px;
     border: none;
     outline: none;
-    background-color: #f5f3f0;
+    background-color: #fff;
     padding: 5px 8px;
   }
 }
