--- a/src/components/site/Footer/Footer.module.scss
+++ b/src/components/site/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .wrap {
-  background-color: #f5f3f0;
+  background-color: #80241e78;
   padding: 12px 0;
   text-align: center;
   line-height: 20px;
