--- a/src/components/site/HomeNavigation/HomeNavigation.module.scss
+++ b/src/components/site/HomeNavigation/HomeNavigation.module.scss
@@ -11,7 +11,7 @@
   margin-bottom: 50px;
 }
 .wrap {
-  background-color: #eee7f3;
+  background-color: #c398956e;
 }
 @media (min-width: 600px) {
   .list {
