--- a/src/components/site/MainNews/MainNews.module.scss
+++ b/src/components/site/MainNews/MainNews.module.scss
@@ -41,6 +41,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  text-decoration: underline;
 }
 @media (max-width: 900px) {
   .list {
